...
        />
      )}
    </ScreenWrapper>
  );
}

AuthScreen.displayName = 'Auth Screen';
export default AuthScreen;

