...
          style={[
            styles.pb2,
            styles.alignItemsCenter,
            styles.justifyContentCenter,
          ]}>
          <Text
            testID="session-total-units"
            style={[
              styles.sessionUnitCountText(sessionColor),
              styles.shadowStrong,
            ]}>
            {totalUnits}
          </Text>
...
