...
        />
      </BottomActionBar>
    </ScreenWrapper>
  );
}

SessionSummaryScreen.displayName = 'Session Summary Screen';
export default SessionSummaryScreen;

